# RoadTailBench-Zoo

./: .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml
configs/: alpamayo_stub.json  opendrivevla_stub.json  rule_based.json  uniad_stub.json  vad_stub.json
docs/: ADAPTER_PROTOCOL_ZH.md  MODEL_STATUS_ZH.md
roadtailbench_zoo/adapters/: alpamayo.py  external_stub.py  opendrivevla.py  rule_based.py  uniad.py  vad.py
roadtailbench_zoo/protocol/: __init__.py  adapter.py  types.py
tests/: smoke_test.py
