[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadtailbench-zoo"
version = "0.1.0"
description = "Model adapter zoo for RoadTailBench closed-loop evaluation."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "RoadTailBench Authors" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["roadtailbench_zoo*"]
